unpackaged/main/default/objects/Airline_Ticket__c/Airline_Ticket__c.object-meta.xml
<CustomObject>
    <label>Airline Ticket</label>
    <nameField>
        <displayFormat>PASS-{0000}</displayFormat>
        <label>Passenger ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airline Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>