unpackaged/main/default/objects/Airline_Ticket__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Logbook</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Airline Tickets</relationshipLabel>
    <relationshipName>Passengers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>