unpackaged/main/default/objects/Airline_Ticket__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>IF(!ISBLANK(Passport__c),

Passport__r.Full_Legal_Name__c,

Contact__r.Name_as_it_appears_on_passport__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>