unpackaged/main/default/objects/Airline_Ticket__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <label>Flight #</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Flight_Booking__c.Logbook__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Flight_Booking__c</referenceTo>
    <relationshipLabel>Airline Tickets</relationshipLabel>
    <relationshipName>Airline_Tickets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>