unpackaged/main/default/objects/Airline_Ticket__c/fields/Frequent_Flyer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Formula__c</fullName>
    <formula>Frequent_Flyer_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequent Flyer #</label>
    <type>Text</type>
</CustomField>