unpackaged/main/default/objects/Airline_Ticket__c/fields/Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Frequent Flyer #</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <valueField>Frequent_Flyer_Number__c.Client_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Frequent_Flyer_Number__c</referenceTo>
    <relationshipLabel>Airline Tickets</relationshipLabel>
    <relationshipName>Airline_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>