unpackaged/main/default/objects/Airline_Ticket__c/fields/Global_Entry_TSA__c.field-meta.xml
<CustomField>
    <fullName>Global_Entry_TSA__c</fullName>
    <formula>Contact__r.Global_Entry_TSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Entry/TSA #</label>
    <type>Text</type>
</CustomField>