unpackaged/main/default/objects/Airline_Ticket__c/fields/Name_for_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Name_for_Ticket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name for Ticket</label>
    <length>200</length>
    <type>Text</type>
</CustomField>