unpackaged/main/default/objects/Airline_Ticket__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Passport does not exist</errorMessage>
        <filterItems>
            <field>$Source.Contact__c</field>
            <operation>equals</operation>
            <valueField>Passport__c.Client_Name__c</valueField>
        </filterItems>
        <infoMessage>Only passports for the contact chosen appear</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Passport__c</referenceTo>
    <relationshipLabel>Airline Tickets</relationshipLabel>
    <relationshipName>Airline_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>