unpackaged/main/default/objects/Airline_Ticket__c/fields/Passport_Formula__c.field-meta.xml
<CustomField>
    <fullName>Passport_Formula__c</fullName>
    <formula>Passport__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport</label>
    <type>Text</type>
</CustomField>