unpackaged/main/default/objects/Airline_Ticket__c/fields/Refundable__c.field-meta.xml
<CustomField>
    <fullName>Refundable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refundable</label>
    <length>200</length>
    <type>Text</type>
</CustomField>