unpackaged/main/default/objects/Airline_Ticket__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>